cxx-sensors/src/test/resources/org/sonar/cxx/sensors/reports-project/clang-tidy-reports/cpd.report-default-rule-id.txt
sources\utils\code_chunks.cpp:2:10: fatal error: info without rule id
    void foo(int bar);
         ^

sources\utils\code_chunks.cpp:2:11: error: info without rule id
    void foo(int bar);
          ^

sources\utils\code_chunks.cpp:2:12: warning: info without rule id
    void foo(int bar);
           ^

sources\utils\code_chunks.cpp:2:13: remark: info without rule id
    void foo(int bar);
            ^
